--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-#stream{  width: 700px ;
+body{ background-color: #c0deed; }
+#stream{  width: 500px ;
           margin-left: auto ;
           margin-right: auto ;
       	  background-color: silver;}
-.tweet{ width: 600px;
+.tweet{ width: 496px;
 		margin-left: auto;
 		margin-right: auto;
 		margin-top: 2px;
 		margin-bottom: 2px;
 		background-color: white; }
+.user{  font-weight: bold; }
