--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
-body{ background-color: #c0deed; }
+body{ 
+	background: #c0deed; }
 button{
-	border-radius: 25%;
-	background-color: #008cba
+	border-radius: 25px;
+	background-color: #1dcaff
+
 }
-#title{  width: 1049px;
-	      margin-left: auto;
-	      margin-right: auto; }
-#stream{  width: 500px ;
-          margin-left: auto ;
-          margin-right: auto ;
-      	  background-color: silver;}
-.tweet{ width: 494px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 3px;
-		margin-bottom: 3px;
-		background-color: white; }
-.user{  font-weight: bold; }
-.timestamp{  font-style: italic; }
-.message{  font-size: 17px
-           font-family: 'Helvetica Neue'; 
-           }
+#title{
+    width: 1049px;
+    margin-left: auto;
+    margin-right: auto; }
+#stream{  
+	width: 500px ;
+	margin-left: auto ;
+	margin-right: auto ;
+	background-color: silver;}
+.tweet{ 
+	width: 494px;
+	margin-left: auto;
+    margin-right: auto;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    background-color: white; }
+.user{  
+	display: inline-block;
+	font-weight: bold;
+	width: auto; }
+.timestamp{  
+	display: inline-block;
+	font-style: italic; 
+	width: auto;}
+.message{  
+	font-size: 17px
+	font-family: 'Helvetica'; 
+    }       }
