--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
 	background-color: #e6ecf0; }
 button{
 	border-radius: 25%;
-	background-color: #008cba
+	background-color: #0084b4
 }
 #title{  
 	width: 1049px;
@@ -30,7 +30,7 @@ button{
   display: inline-block; }
 .message{  
 	font-size: 17px
-    font-family: 'Helvetica Neue'; }
+    font-family: Arial; }
 #hashtagTable{
   width: 258px;
   padding: 15px;
